ili2fme 5.8.0 (2013-04-19)
---------------------------
- writer automatically casts IFMEText to IFMEPoint (to simplify workbenches) 

ili2fme 5.7.6 (2012-11-21)
---------------------------
- bug: ItfReader failed to read polylines
- ili2c-4.4.10

ili2fme 5.7.5 (2012-11-15)
---------------------------
- function Reader.getProperties() added to make ili2fme usable by FME2013 BETA
- improved error msg in case of trying to write non numeric values as numbers
- ili2c-4.4.9

ili2fme 5.7.4 (2012-08-31)
---------------------------
- ili2c-4.4.8
- iox-ili-1.6.8
- bug: XtfReader failed to skip element content of OIDType

ili2fme 5.7.3 (2012-08-24)
---------------------------
- bug: failed to write empty baskets

ili2fme 5.7.2 (2012-07-23)
---------------------------
- ili2c-4.4.7
- bug: XtfWriter failed to write OIDType with XML-attri

ili2fme 5.7.1 (2012-06-28)
---------------------------
- ili2c-4.4.6
- fixed Writer: ItfWriter didn't round numeric values

ili2fme 5.7.0 (2012-06-06)
---------------------------
- added new format feature type XTF_FORMAT to support reading/writing OIDSPACES
- fixed Writer: IFMEPoint leaked if COORD as non FME geometry and enhanced geometry model
- ili2c-4.4.5

ili2fme 5.6.0 (2012-04-06)
---------------------------
- ili2c-4.4.4
- Reader: read attribute types
- fixed Reader: JVM crash if Linkobject without an oid 

ili2fme 5.5.0 (2012-02-02)
---------------------------
- upgraded to jre 1.6.0
- ili2c-4.4.3
- fixed Writer: no TID on instances where ASSOCATION is without OID property
- fixed Reader: keep ordering of attributes in schema features 

ili2fme 5.4.3 (2011-11-01)
---------------------------
- fixed Reader: NullPointerException if UNDEFINED reference attr

ili2fme 5.4.2 (2011-10-20)
---------------------------
- log feature if geometry conversion error
- fixed: NullPointerException if filename without path
- fixed: read/write of xtf reference attrs
- check that xtf_class is a qualified interlis name (contains at least one '.')
