@@ -125,7 +125,7 @@ DESTINATION_PREAMBLE
 # ============================================================================ 
 # The following GUI line prompts for a file to be used as the
 # the destination for the INTERLIS 2 data.
-GUI FILENAME DestDataset INTERLIS_2_Files(*.xtf)|*.xtf|INTERLIS_1_FILES(*.itf)|*.itf|INTERLIS_GML_FILES(*.gml)|*.gml|All_Files|*.* Destination INTERLIS File:
+GUI FILENAME DestDataset INTERLIS_2_Files(*.xtf)|*.xtf|INTERLIS_1_FILES(*.itf)|*.itf|INTERLIS_XRF_FILES(*.xrf)|*.xrf|INTERLIS_GML_FILES(*.gml)|*.gml|All_Files|*.* Destination INTERLIS File:
 END_DESTINATION_PREAMBLE
 
 DESTINATION_SETTINGS
