@@ -130,6 +130,102 @@ public class ModelUtility {
 	}
 	/** @return map<String fmeFeatureTypeName, ViewableWrapper wrapper>
 	 */
+	public static HashMap getXrfTransferViewables(ch.interlis.ili2c.metamodel.TransferDescription td)
+	{
+		HashMap ret = new HashMap();
+		Iterator modeli = td.iterator();
+		while (modeli.hasNext()) {
+			Object mObj = modeli.next();
+			if (mObj instanceof Model) {
+				Model model = (Model) mObj;
+				if (model instanceof TypeModel) {
+					continue;
+				}
+				if (model instanceof PredefinedModel) {
+					continue;
+				}
+				Iterator topici = model.iterator();
+				while (topici.hasNext()) {
+					Object tObj = topici.next();
+					if (tObj instanceof Topic) {
+						Topic topic = (Topic) tObj;
+						Iterator iter = topic.getViewables().iterator();
+						while (iter.hasNext()) {
+							Object obj = iter.next();
+							if (obj instanceof Viewable) {
+								Viewable v = (Viewable) obj;
+								if(isPureRefAssoc(v)){
+									continue;
+								}
+								//log.logMessageString("getTransferViewables() leave <"+v+">",IFMELogFile.FME_INFORM);
+								String className = v.getScopedName(null);
+								ViewableWrapper viewableWrapper =
+									new ViewableWrapper(className, v);
+								java.util.List attrv =
+										ch.interlis.iom_j.itf.ModelUtilities.getIli1AttrList(
+										(AbstractClassDef) v);
+								viewableWrapper.setAttrv(attrv);
+								ret.put(
+									viewableWrapper.getFmeFeatureType(),
+									viewableWrapper);
+								// set geom attr in wrapper
+								Iterator attri = v.getAttributes();
+								while (attri.hasNext()) {
+									Object attrObj = attri.next();
+									if (attrObj instanceof AttributeDef) {
+										AttributeDef attr =
+											(AttributeDef) attrObj;
+										Type type =
+											Type.findReal(attr.getDomain());
+										if (type instanceof PolylineType 
+											|| type instanceof SurfaceOrAreaType 
+											|| type instanceof CoordType
+											){
+												viewableWrapper.setGeomAttr4FME(attr);
+												break;
+										}
+									}
+								}
+								// add helper tables of surface and area attributes
+								attri = v.getAttributes();
+								while (attri.hasNext()) {
+									Object attrObj = attri.next();
+									if (attrObj instanceof AttributeDef) {
+										AttributeDef attr =
+											(AttributeDef) attrObj;
+										Type type =
+											Type.findReal(attr.getDomain());
+										if (type
+											instanceof AreaType) {
+											String name =
+												v.getContainer().getScopedName(
+													null)
+													+ "."
+													+ v.getName()
+													+ "_"
+													+ attr.getName();
+											ViewableWrapper wrapper =
+												new ViewableWrapper(name);
+											wrapper.setGeomAttr4FME(attr);
+											ArrayList helper_attrv=new ArrayList();
+											helper_attrv.add(new ViewableTransferElement(attr));
+											wrapper.setAttrv(helper_attrv);
+											ret.put(
+												wrapper.getFmeFeatureType(),
+												wrapper);
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+		return ret;
+	}
+	/** @return map<String fmeFeatureTypeName, ViewableWrapper wrapper>
+	 */
 	public static HashMap getXtfTransferViewables(ch.interlis.ili2c.metamodel.TransferDescription td,int inheritanceMappingStrategy)
 	{
 		HashSet leaveclassv=new HashSet();
