@@ -1,7 +1,7 @@
-#Fri, 19 Apr 2013 17:43:06 +0200
+#Mon, 29 Apr 2013 11:24:17 +0200
 #Wed Feb 02 15:55:13 CET 2011
 versionMicro=0
 versionMinor=8
 versionBranch=
-versionDate=20130419
+versionDate=20130429
 versionMajor=5
