@@ -1,6 +1,8 @@
 ili2fme 5.8.0 (2013-04-19)
 ---------------------------
 - writer automatically casts IFMEText to IFMEPoint (to simplify workbenches) 
+- ili2c-4.4.12
+- added XRF writer (BETA)
 
 ili2fme 5.7.6 (2012-11-21)
 ---------------------------
